fixed column collapse without content

--- a/static/css/partials/_common.scss
+++ b/static/css/partials/_common.scss
@@ -1,6 +1,6 @@
 /* reset from content builder */
 .row > * {
-    min-height: 0;
+    min-height: 1px;
 }
 html {
     height:100%;
